--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
-            android:visibility="gone"
+            android:visibility="visible"
             android:elevation="0dp"
             android:layout_marginBottom="20dp"
             android:orientation="vertical">
@@ -59,7 +59,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:src="@color/black"
+                    android:src="@drawable/image_placeholder"
+                    android:scaleType="centerCrop"
                     android:contentDescription="@string/backdrop" />
 
                 <androidx.cardview.widget.CardView
@@ -87,6 +88,8 @@
                             android:layout_marginBottom="2dp"
                             android:text="@string/title"
                             android:textColor="@color/white"
+                            android:maxLines="3"
+                            android:ellipsize="end"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -231,7 +234,7 @@
             android:layout_height="600dp"
             android:gravity="center"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
