--- a/app/src/main/res/layout/v_list_layout.xml
+++ b/app/src/main/res/layout/v_list_layout.xml
@@ -47,6 +47,8 @@
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:maxLines="3"
+                android:ellipsize="end"
                 android:layout_marginBottom="2dp"/>
 
             <LinearLayout
